# AoNami

./: .cache_ggshield  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  aonami.rc  deployqt.sh  downloader.h  filemanager.cpp  filemanager.h  functions.hpp  global.h  install.reg  kyokou.aps  kyokou.qrc  kyokou.rc  kyokou.reg  main.cpp  package-lock.json  qml.qrc  temp.txt  vcpkg.json
cmake/: FindDotNetFramework.cmake  FindLibmpv.cmake  FindTidy.cmake  FindWebP.cmake
debug/: debugger.cpp  debugger.h
dependencies/includes/pugixml/: pugixml.cpp  pugixml.hpp
dependencies/lib/: pugixml.lib  wasmtime.dll.lib
devtools/: class_renamer.py  new_provider.py  template.cpp  template.h
launcher/: CMakeLists.txt  main.cpp
legacy/: CSoup.cpp  CSoup.h
models/: playlistmodel.h  searchresultsmodel.cpp
parsers/: episode.cpp  showparser.h  showresponse.cpp
parsers/extractors/: videoextractor.cpp
parsers/providers/: gogoanime.cpp  gogoanime.h  nineanime.cpp  nivod.h
parsers/providers/consumet/: consumet9anime.cpp  consumet9anime.h
qml/: ImageButton.qml  InfoPage.qml  LoadingScreen.qml  TitleBar.qml  WatchListPage.qml  main.qml  playlist.qml
src/: application.cpp  application.h  bingime.rc  config.h  cursorposprovider.hpp  downloader.cpp  forwards.h  functions.hpp  global.h  main.cpp  pch.h  tools.hpp  watchlistmanager.cpp  watchlistmanager.h
src/Data/: playinfo.h  playlistitem.cpp  playlistitem.h  showdata.cpp  showdata.h  video.cpp  video.h
src/Providers/: CMakeLists.txt  allanime.cpp  allanime.h  gogoanime.cpp  gogoanime.h  haitu.cpp  haitu.h  iyf.cpp  iyf.h  kimcartoon.cpp  kimcartoon.h  nivod.cpp  nivod.h  showprovider.h
src/Providers/Extractors/: gogocdn.h  videoextractor.h  vidsrcextractor.h
src/app/: appexception.h  application.cpp  application.h  config.h  logger.cpp  logger.h  main.cpp  myexception.h  qml_singleton.h  settings.cpp  settings.h
src/base/: downloadmanager.cpp  downloadmanager.h  librarymanager.cpp  librarymanager.h  providermanager.cpp  providermanager.h  searchmanager.cpp  searchmanager.h  servicemanager.h  showdata.cpp  showdata.h  showmanager.cpp  showmanager.h
src/base/network/: csoup.cpp  csoup.h  network.cpp  network.h
src/base/player/: mpvObject.cpp  mpvObject.h  playinfo.h  playlistitem.cpp  playlistitem.h  playlistmanager.cpp  playlistmanager.h
src/base/utils/: functions.h  wasmengine.h
src/cmake/: FindLibmpv.cmake
src/core/: downloadmanager.cpp  downloadmanager.h  downloadtask.cpp  downloadtask.h  episodelistmodel.cpp  episodelistmodel.h  librarymanager.cpp  librarymanager.h  libraryproxymodel.cpp  libraryproxymodel.h  providermanager.cpp  providermanager.h  searchresultmanager.cpp  searchresultmanager.h  showdata.cpp  showdata.h  showmanager.cpp  showmanager.h
src/data/: playlistitem.h  showdata.cpp  showdata.h
src/downloader/: downloadmanager.cpp  downloadmanager.h
src/gui/: cursor.h  episodelistmodel.cpp  episodelistmodel.h  errordisplayer.h  imagenamfactory.h  librarymodel.h  libraryproxymodel.cpp  libraryproxymodel.h  playlistmodel.cpp  playlistmodel.h  searchresultmodel.h  serverlistmodel.cpp  serverlistmodel.h  tracklistmodel.h  uibridge.h
src/gui/models/: downloadlistmodel.cpp  downloadlistmodel.h  episodelistmodel.cpp  episodelistmodel.h  libraryproxymodel.h  playlistmodel.cpp  searchresultmodel.h  serverlistmodel.cpp  serverlistmodel.h
src/gui/qml/: SideBar.qml  TitleBar.qml  log.qml  main.qml
src/models/: applicationmodel.cpp  applicationmodel.h  downloadmodel.cpp  downloadmodel.h  episodelistmodel.cpp  episodelistmodel.h  playlistmodel.cpp  playlistmodel.h  searchresultsmodel.h  watchlistmodel.cpp  watchlistmodel.h
src/mpv/: mpv.hpp  mpvObject.cpp  mpvObject.h
src/network/: CSoup.cpp  CSoup.h  client.cpp  client.h  csoup.cpp  csoup.h  myexception.h  net.h  network.cpp  network.h  pugixml.hpp
src/parsers/: episode.h  showparser.cpp  showparser.h  showresponse.h
src/parsers/extractors/: gogocdn.cpp  gogocdn.h  videoextractor.h  vidstream.cpp  vidstream.h
src/parsers/providers/: gogoanime.h  nineanime.h  nivod.cpp  nivod.h
src/player/: audiolistmodel.h  mpv.hpp  mpvObject.cpp  mpvObject.h  playinfo.h  playlistitem.cpp  playlistitem.h  playlistmanager.cpp  playlistmanager.h  serverlist.cpp  serverlist.h  serverlistmodel.cpp  serverlistmodel.h  subtitlelistmodel.cpp  subtitlelistmodel.h  tracklistmodel.h  videolistmodel.h
src/providers/: allanime.cpp  allanime.h  animepahe.cpp  animepahe.h  autoembed.cpp  autoembed.h  bilibili.cpp  bilibili.h  cineby.cpp  cineby.h  dm84.cpp  dm84.h  dmxq.cpp  dmxq.h  fmovies.cpp  fmovies.h  gogoanime.cpp  gogoanime.h  haitu.cpp  haitu.h  hianime.cpp  hianime.h  iyf.cpp  iyf.h  kimcartoon.cpp  kimcartoon.h  nivod.cpp  nivod.h  qqvideo.cpp  qqvideo.h  seedbox.cpp  seedbox.h  showprovider.h  tangrenjie.cpp  tangrenjie.h  wco.cpp  wco.h  wolong.cpp  wolong.h  yingshi.cpp  (+1 more)
src/providers/broken/: autoembed.cpp  autoembed.h  cineby.cpp  cineby.h  dm84.cpp  dm84.h  dmxq.cpp  dmxq.h  fmovies.cpp  fmovies.h  gogoanime.cpp  gogoanime.h  haitu.cpp  haitu.h  kimcartoon.cpp  kimcartoon.h  nivod.cpp  nivod.h  tangrenjie.cpp  tangrenjie.h  wco.cpp  wco.h  wolong.cpp  wolong.h  yingshi.cpp  yingshi.h
src/providers/extractors/: gogocdn.cpp  gogocdn.h  vidsrcextractor.cpp  vidsrcextractor.h
src/qml/: ControlBar.qml  DownloadPage.qml  InfoPage.qml  MpvPage.qml  SearchPage.qml  SideBar.qml  TitleBar.qml  WatchListPage.qml  log.qml  main.qml  settings.qml
src/qml/components/: CustomButton.qml  CustomComboBox.qml  CustomTextField.qml  ImageButton.qml  LoadingScreen.qml  MediaGridView.qml  ShowItem.qml  TitleBar.qml
src/qml/download/: DownloadListView.qml  DownloadPage.qml
src/qml/explorer/: AdvancedSearch.qml  ExplorerPage.qml  SearchBar.qml  SearchPage.qml
src/qml/info/: EpisodeListView.qml  InfoPage.qml
src/qml/player/: ControlBar.qml  MpvPage.qml  MpvPlayer.qml  PlayListSideBar.qml  ServerListPopup.qml  ServerVideoAudioListDelegate.qml  (+1 more)
src/utils/: errorhandler.h  functions.cpp  functions.h  logger.cpp  logger.h  myexception.h  qml_singleton.h  wasmengine.h
(+88 files in other folders)
